2000-02-10  Richard Earnshaw  <rearnsha@arm.com>

	* arm.c (find_barrier): Find the last barrier within the allowed 
	range.

2000-02-09  Nick Clifton  <nickc@cygnus.com>

	* config/arm/arm-protos.h: Replace PROTO with PARAMS.

2000-02-09  Scott Bambrough  <scottb@netwinder.org>

        * config/arm/arm.md (movsi): In PIC mode, make sure that a
        constant source address is legitimate.

2000-02-09  Philip Blundell  <pb@futuretv.com>

        * config/arm/arm.c (legitimize_pic_address): Handle LABEL_REF
        correctly.

        * config/arm/arm.h (LEGITIMATE_CONSTANT_P): Allow anything when
        generating PIC.
        (LEGITIMATE_PIC_OPERAND): Disallow references to labels.

2000-02-09  Nick Clifton  <nickc@cygnus.com>

	* config/arm/linux-elf.h (FUNCTION_PROFILER): Rename to
	ARM_FUNCTION_PROFILER. 

	* config/arm/netbsd.h (FUNCTION_PROFILER): Rename to
	ARM_FUNCTION_PROFILER. 

	* config/arm/linux-oldld.h: Imported from mainline sources.

2000-02-07  Nick Clifton  <nickc@cygnus.com>

	* config/arm/lib1funcs.asm: Merge in thumb functions from
	lib1thumb.asm.
	
	* config/arm/lib1thumb.asm: Delete.

2000-02-04  Nick Clifton  <nickc@cygnus.com>

	* config/arm/arm.c: Sychronised with current Red hat local
	sources. 
	* config/arm/arm.h: Ditto.
	* config/arm/arm-protos.h: Ditto.

2000-02-02  Bernd Schmidt  <bernds@cygnus.co.uk>

	* arm.c (soft_df_operand): Reject SUBREGs containing a constant.

	* arm.c (arm_gen_movstrqi): Generate halfword stores rather than two
	byte stores.

2000-02-02  Nick Clifton  <nickc@cygnus.com>

	* config/arm/thumb.c (thumb_exit): Additional fix for same bug.

	* config/arm/arm.md (epilogue): Fix rtl checking abort because
	(return) was emited using an emit_insn() call. 
	
2000-01-31  Nick Clifton  <nickc@cygnus.com>

	* config/arm/arm.c (output_thumb_prologue): Fix bug generating
	thumb stack frame.
	(thumb_exit): Move frame pointer back into hard frame pointer
	register if backtracing is being used.
